crud routes, rides

--- a/backend/default.conf
+++ b/backend/default.conf
@@ -1,5 +1,5 @@
 upstream destacame {
-    server app:8000;
+    server backend:8000;
 }
 
 server {
@@ -17,6 +17,6 @@ server {
     }
 
     location /static/ {
-        alias /app/static/;
+        alias /app/backend/static/;
     }
 }
